--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "scripts": {
     "tc": "tsc --noEmit",
     "tc:watch": "npm run type-check -- --watch",
+    "lint": "eslint '*.ts' './src/**/*.tsx'",
+    "lint:fix": "eslint '*.ts' './src/**/*.tsx' --fix",
     "build": "webpack --config webpack.prod.ts",
     "start": "webpack-dev-server --open --config webpack.dev.ts",
     "deploy": "aws s3 sync ./dist s3://naranara-buck --profile=naranara",
@@ -57,9 +59,14 @@
     "@types/redux": "^3.6.0",
     "@types/redux-logger": "^3.0.7",
     "@types/webpack-env": "^1.13.9",
+    "@typescript-eslint/eslint-plugin": "^1.9.0",
+    "@typescript-eslint/parser": "^1.9.0",
     "babel-loader": "^8.0.5",
     "copy-webpack-plugin": "^5.0.3",
     "css-loader": "^2.1.1",
+    "eslint": "^5.16.0",
+    "eslint-config-google": "^0.13.0",
+    "eslint-plugin-react": "^7.13.0",
     "file-loader": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
     "json-loader": "^0.5.7",
