--- a/.babelrc
+++ b/.babelrc
@@ -5,6 +5,7 @@
         "@babel/react"
     ],
     "plugins": [
+        "webpack-async-module-name",
         "@babel/plugin-syntax-dynamic-import",
         "@babel/proposal-class-properties",
         "@babel/proposal-object-rest-spread"
